overlays/staging/krakend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: krakend-ingress
  namespace: micros-krakend-staging
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: krakend.ethiopiandemena.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: krakend
                port:
                  number: 80
  tls:
    - hosts:
        - krakend.ethiopiandemena.com
      secretName: krakend-tls
